<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IT Books</string>
    <string name="application_name">IT Books</string>



    <string name="btn_confirm">Confirm</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_close">Close</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_open">Open</string>
    <string name="btn_agree">I agree.</string>
    <string name="btn_not_agree">I do not agree.</string>
    <string name="btn_turn_on">Turn on</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_login">Login</string>
    <string name="btn_not_yet">Not yet</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_app_rating">App rating</string>

    <string name="suggestion_auth">com.itbooks</string>

    <string name="lbl_about">About</string>
    <string name="lbl_share_app">Share</string>
    <string name="lbl_share_book">Share this book</string>
    <string name="lbl_share_app_content">Hello!\n\n\u00A0\u00A0\u00A0\u00A0Find more IT-Books?\n\nDownload:\n
        http://tinyurl.com/kto2y59</string>
    <string name="lbl_share_book_content">Hello!\n\n00A0\u00A0\u00A0\u00A0I\'ve found a nice IT-Book for
        you.\n\n"%1$s"\n\nAuthor:%2$s\n\nDownload:\n%3$s\n\nDownload App:\nhttp://tinyurl.com/kto2y59</string>
    <string name="lbl_pull_to_load">Pull to load data.</string>
    <string name="lbl_search">Search keyword, i.e Android</string>
    <string name="lbl_title">Title</string>
    <string name="lbl_subtitle">Sub-Title</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_author">Author</string>
    <string name="lbl_isbn">ISBN</string>
    <string name="lbl_year">Year</string>
    <string name="lbl_page">Page</string>
    <string name="lbl_publisher">Publisher</string>
    <string name="lbl_download">Here download.</string>
    <string name="lbl_more">More…</string>
    <string name="lbl_no_data">Nothing found!</string>
    <string name="lbl_play_service">This application needs Google Play Service, you must install it first.</string>
    <string name="lbl_download_path">Find file: %1$s</string>
    <string name="lbl_no_more">No more data…</string>
    <string name="lbl_bookmark">My bookmarks</string>
    <string name="lbl_bookmark_the_book">Bookmark this book</string>
    <string name="lbl_unbookmark_the_book">Removed from bookmarks</string>
    <string name="lbl_bookmark_info">Bookmark this book by clicking the icon on bar.</string>
    <string name="lbl_bookmark_info_never_show_again">I\'v known, never show this.</string>
    <string name="lbl_bookmark_empty">Bookmark-list is empty.</string>
    <string name="lbl_turn_on_push_info">Do you want to turn on push-messages? We can provide you much more information about many new IT-eBooks regularly.</string>
    <string name="lbl_by">By</string>
    <string name="lbl_history">History</string>
    <string name="lbl_history_empty">No downloads</string>
    <string name="lbl_login_benefit">Login with Google Account, you can save your Bookmarks and Downloaded files permanently.</string>

    <string name="lbl_status_pending">Pending</string>
    <string name="lbl_status_running">Downloading</string>
    <string name="lbl_status_failed">Failed</string>
    <string name="lbl_status_successfully">Available</string>
    <string name="lbl_status_new_loading">This book should be loaded again</string>

    <string name="lbl_welcome">Welcome to %1$s\na free and lightweight app to download IT-Books!</string>
    <string name="lbl_hello">Hello %1$s!</string>
    <string name="lbl_connect_google">Connecting on Google…</string>

    <string name="menu_forward">Forward</string>
    <string name="menu_backward">Backward</string>
    <string name="menu_remove_all_bookmarks">Clean bookmarks</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_more_apps">More Apps</string>
    <string name="menu_book_delete">Delete</string>
    <string name="menu_book_copy">Copy</string>
    <string name="menu_sync">Sync</string>
    <string name="menu_delete_all">Delete all</string>
    <string name="menu_book_info">Info</string>

    <!--debug:-->
    <!--<string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->
    <!--release:-->
    <string name="banner_ad_unit_id">ca-app-pub-9133982521997162/8164635739</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-9133982521997162/1349595734</string>

    <string name="play_service_url">market://details?id=com.google.android.gms</string>

    <!-- Shown in the 'About' window of the app. -->
    <string name="about_body">&lt;b&gt;IT Books &lt;/b&gt;&lt;br&gt;Version %s &lt;br&gt;</string>
    <!-- Shown as a link in the About screen of the app; user can click it to see the licenses. -->
    <string name="about_licenses">Open Source Licenses</string>
    <!-- Shown as a link in the About screen of the app; user can click to see the EULA. -->
    <string name="about_eula">End User License Agreement</string>
    <string name="about_eula_legal_text">Your use of this application is governed by a)Activating permissions of
        hardware that the features of this application need and work well. b)The Google Terms of
        Service (http://www.google.com/intl/en/policies/terms/), Google\'s Privacy
        Policy(http://www.google.com/intl/en/policies/privacy/). c)Any applicable Google service-specific terms of service of privacy
        policies. Google\'s terms of service and privacy policies may be updated from time to time and without
        notice.\n\n\nBy using the application, your agree to the use of your data and permissions of your hardware in
        accordance with Google\'s Privacy Policy and Google Terms of Service.</string>


    <string name="setting_push_cat">Push</string>
    <string name="setting_push_title">@string/lbl_turn_on_push_info</string>
    <string name="setting_push_on">On</string>
    <string name="setting_push_off">Off</string>
    <string name="setting_view_style_list">List</string>
    <string name="setting_view_style_grid">Grid</string>

    <string name="setting_images">Images</string>
    <string name="setting_no_image">Do not show images anyway except bookmark-list.</string>
    <string name="setting_no_image_on">Current: No images</string>
    <string name="setting_no_image_off">Current: Show images</string>
    <string name="setting_show_image_wifi">Show images except bookmark-list only when WIFI is on.</string>
    <string name="setting_show_image_on_wifi">Current: Only when WIFI</string>
    <string name="setting_show_image_off_wifi">Current: WIFI, also including 3g, LTE, any cellular network.</string>

    <string name="setting_sync">Sync(with login)</string>
    <string name="setting_sync_when_charging">Sync data at charging only</string>
    <string name="setting_sync_when_wifi">Sync data with WIFI only</string>

    <string name="msg_bookmark_the_book">Added to bookmarks</string>
    <string name="msg_unbookmark_the_book">Removed from bookmarks</string>
    <string name="msg_push_registering">Signing in push…</string>
    <string name="msg_push_unregistering">Signing out push…</string>
    <string name="msg_items_count">Find %s books.</string>
    <string name="msg_items_not_found">Can\'t find books you searched.</string>
    <string name="msg_refresh_fail">@string/msg_items_not_found</string>
    <string name="msg_no_reader">You don\'t have any 3rd application to read PDF, do you want to download a read?</string>
    <string name="msg_downloading_fail">Failed, can not download this book.</string>
    <string name="msg_new_api_version_update">Hi There, a good news including a bad one I have to info you that we now use new API to support direct download instead web, and bookmark is now in cloud so that don\'t worry about lost of them in the future. But, sorry, unfortunately, the former data must be removed from previous bookmark, I will appreciate your understanding and you support me ever.</string>
    <string name="msg_require_external_storage">The downloading requires external storage or large built-in storage on the device, please check whether you have inserted SD card or not.</string>
    <string name="msg_op">Operating…</string>
    <string name="msg_welcome_2_0">Welcome…</string>
    <string name="msg_welcome_3_0">Thank you for using this App…</string>
    <string name="msg_welcome">Welcome…</string>
    <string name="msg_one_book_downloaded">One book has been downloaded, please check.</string>
    <string name="msg_file_copied">File has been copied.</string>
    <string name="msg_file_deleted">File deleted.</string>
    <string name="msg_file_duplicated">Target file is already existed. Operation stopped.</string>
    <string name="msg_cell_network_no_image">No images(ex.Bookmark-List) without WIFI.</string>
    <string name="msg_access_driver_failed">Can not access Google Driver.</string>
    <string name="msg_sync_req_for_driver">You need login to access Google Driver for sync.</string>
    <string name="msg_sync_in_progress">Sync in progress</string>
    <string name="msg_scheduled_sync_done">Scheduled sync finished</string>
    <string name="msg_file_delete_failed">Error, files can not be deleted, try manually.</string>
    <string name="msg_pull_failed">Files can not be pulled from drive, try manually.</string>
    <string name="msg_push_failed">Files can not be pushed onto drive, try manually.</string>
    <string name="msg_file_delete_success">Files deleted, please check.</string>
    <string name="msg_pull_success">Files pulled, please check.</string>
    <string name="msg_push_success">Files pushed, please check.</string>

    <string name="msg_sync_warning_1">You must now be synchronize? We will be spending a lot of network traffic and electricity.</string>
    <string name="msg_sync_warning_2">You must now be synchronize? You will be spending a lot of network traffic.</string>
    <string name="msg_sync_warning_3">You must now be synchronize? It will consume a lot of electricity.</string>

    <string name="msg_sync_need_login">Sync can not be started, you should have to login with Google again.</string>
    <string name="msg_permission_prompt">Without "Read Phone State" and "Write External Storage" the App can\'t work…</string>

</resources>
