<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/setting_push_cat"
        android:layout="@layout/setting_entry">
        <CheckBoxPreference
            android:key="key.push.setting"
            android:title="@string/setting_push_title"
            android:summaryOn="@string/setting_push_on"
            android:summaryOff="@string/setting_push_off"
            android:layout="@layout/setting_item"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/setting_entry"
        android:title="@string/setting_sync">
        <CheckBoxPreference
            android:key="key.sync.charging"
            android:title="@string/setting_sync_when_charging"
            android:summaryOn="@string/btn_yes"
            android:summaryOff="@string/btn_no"
            android:layout="@layout/setting_item"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="key.sync.wifi"
            android:title="@string/setting_sync_when_wifi"
            android:summaryOn="@string/btn_yes"
            android:summaryOff="@string/btn_no"
            android:layout="@layout/setting_item"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/setting_entry"
        android:title="@string/setting_images">
        <CheckBoxPreference
            android:key="key.no.images"
            android:title="@string/setting_no_image"
            android:summaryOn="@string/setting_no_image_on"
            android:summaryOff="@string/setting_no_image_off"
            android:layout="@layout/setting_item"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="key.show.images.wifi"
            android:title="@string/setting_show_image_wifi"
            android:summaryOn="@string/setting_show_image_off_wifi"
            android:summaryOff="@string/setting_show_image_on_wifi"
            android:layout="@layout/setting_item"
            android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>