<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/common_transparent"
                android:src="@drawable/bookmark_info" />

            <com.itbooks.views.FontTextView
                font="thin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/a400_50"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/lbl_bookmark_info"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_common_white" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/close_confirm_btn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/primary_color"
                android:text="@string/btn_ok"
                android:textColor="@color/text_common_white" />

            <Button
                android:id="@+id/close_i_know_btn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="5dp"
                android:background="@color/primary_accent"
                android:text="@string/lbl_bookmark_info_never_show_again"
                android:textColor="@color/text_common_white" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>